--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,17 +10,18 @@ set -s escape-time 0
 bind \; split-window -v -c "#{pane_current_path}"
 bind \' split-window -h -c "#{pane_current_path}"
 
+# Vim-like pane switching
+bind k select-pane -U 
+bind j select-pane -D 
+bind h select-pane -L 
+bind l select-pane -R 
+
 # Vim-like pane resizing  
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
-
-# Vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
+bind f resize-pane -Z
 
 # Unbind keys
 unbind %
