Enabled mouse in tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,9 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 set -s escape-time 0
 
+# Enable mouse
+set -g mouse on
+
 # Better keybindings for creating splits
 bind \; split-window -v -c "#{pane_current_path}"
 bind \' split-window -h -c "#{pane_current_path}"
