Changed opacity and color scheme

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -220,8 +220,7 @@ schemes:
         cyan: '#00b6ca'
         white: '#7294a4'
 
-
-colors: *nordic
+colors: *macOS
 
 # Visual Bell
 #
@@ -253,7 +252,7 @@ colors: *nordic
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+background_opacity: 0.90
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
