--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -252,7 +252,13 @@ colors: *macOS
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.90
+background_opacity: 0.95
+
+# window size
+window:
+  dimensions:
+    columns: 120
+    lines: 30
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
